configure con exito el jwt del lado del servidor